# libchistka

./: .gitignore  Makefile.am  README  configure.ac
man/: Makefile.am  chistka.1  chistkad.1  unchistka.1
src/: Makefile.am  chistka  common.h  daemon.c  hashset.c  hashset.h  hashset2.c  shim.c  unchistka
